eunomiaJava/modelLogic/src/main/java/nl/rug/parsers/FitchGrammarParser.java
// Generated from java-escape by ANTLR 4.11.1
package nl.rug.parsers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FitchGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, IDENTITY=7, NEGATION=8, 
		CONJUNCTION=9, DISJUNCTION=10, IMPLICATION=11, BICONDITIONAL=12, EXISTENTIAL=13, 
		UNIVERSAL=14, ATOM=15, VARIABLE=16, CONSTANT=17, NUMBER=18;
	public static final int
		RULE_sentence = 0, RULE_contradiction = 1, RULE_expression = 2, RULE_justification = 3, 
		RULE_premise = 4, RULE_introduction = 5, RULE_elimination = 6, RULE_single_reference = 7, 
		RULE_multiple_reference = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"sentence", "contradiction", "expression", "justification", "premise", 
			"introduction", "elimination", "single_reference", "multiple_reference"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'perp'", "'premise'", "'Intro: '", "','", "'Elim: '", "'-'", "'=='", 
			"'~'", "'&'", "'|'", "'->'", "'<->'", "'E'", "'A'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "IDENTITY", "NEGATION", "CONJUNCTION", 
			"DISJUNCTION", "IMPLICATION", "BICONDITIONAL", "EXISTENTIAL", "UNIVERSAL", 
			"ATOM", "VARIABLE", "CONSTANT", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FitchGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public JustificationContext justification() {
			return getRuleContext(JustificationContext.class,0);
		}
		public List<ContradictionContext> contradiction() {
			return getRuleContexts(ContradictionContext.class);
		}
		public ContradictionContext contradiction(int i) {
			return getRuleContext(ContradictionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sentence);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(20); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(20);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
						{
						setState(18);
						contradiction();
						}
						break;
					case NEGATION:
					case EXISTENTIAL:
					case UNIVERSAL:
					case ATOM:
						{
						setState(19);
						expression(0);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(22); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(24);
			justification();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContradictionContext extends ParserRuleContext {
		public ContradictionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contradiction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterContradiction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitContradiction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitContradiction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContradictionContext contradiction() throws RecognitionException {
		ContradictionContext _localctx = new ContradictionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_contradiction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode ATOM() { return getToken(FitchGrammarParser.ATOM, 0); }
		public TerminalNode NEGATION() { return getToken(FitchGrammarParser.NEGATION, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EXISTENTIAL() { return getToken(FitchGrammarParser.EXISTENTIAL, 0); }
		public TerminalNode VARIABLE() { return getToken(FitchGrammarParser.VARIABLE, 0); }
		public TerminalNode UNIVERSAL() { return getToken(FitchGrammarParser.UNIVERSAL, 0); }
		public TerminalNode IDENTITY() { return getToken(FitchGrammarParser.IDENTITY, 0); }
		public TerminalNode CONJUNCTION() { return getToken(FitchGrammarParser.CONJUNCTION, 0); }
		public TerminalNode DISJUNCTION() { return getToken(FitchGrammarParser.DISJUNCTION, 0); }
		public TerminalNode IMPLICATION() { return getToken(FitchGrammarParser.IMPLICATION, 0); }
		public TerminalNode BICONDITIONAL() { return getToken(FitchGrammarParser.BICONDITIONAL, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ATOM:
				{
				setState(29);
				match(ATOM);
				}
				break;
			case NEGATION:
				{
				setState(30);
				match(NEGATION);
				setState(31);
				expression(7);
				}
				break;
			case EXISTENTIAL:
				{
				setState(32);
				match(EXISTENTIAL);
				setState(33);
				match(VARIABLE);
				setState(34);
				expression(2);
				}
				break;
			case UNIVERSAL:
				{
				setState(35);
				match(UNIVERSAL);
				setState(36);
				match(VARIABLE);
				setState(37);
				expression(1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(55);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(40);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(41);
						match(IDENTITY);
						setState(42);
						expression(9);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(43);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(44);
						match(CONJUNCTION);
						setState(45);
						expression(7);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(46);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(47);
						match(DISJUNCTION);
						setState(48);
						expression(6);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(49);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(50);
						match(IMPLICATION);
						setState(51);
						expression(5);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(52);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(53);
						match(BICONDITIONAL);
						setState(54);
						expression(4);
						}
						break;
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JustificationContext extends ParserRuleContext {
		public PremiseContext premise() {
			return getRuleContext(PremiseContext.class,0);
		}
		public EliminationContext elimination() {
			return getRuleContext(EliminationContext.class,0);
		}
		public IntroductionContext introduction() {
			return getRuleContext(IntroductionContext.class,0);
		}
		public JustificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_justification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterJustification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitJustification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitJustification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JustificationContext justification() throws RecognitionException {
		JustificationContext _localctx = new JustificationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_justification);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				premise();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				elimination();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				introduction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PremiseContext extends ParserRuleContext {
		public PremiseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_premise; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterPremise(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitPremise(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitPremise(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PremiseContext premise() throws RecognitionException {
		PremiseContext _localctx = new PremiseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_premise);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntroductionContext extends ParserRuleContext {
		public List<TerminalNode> IDENTITY() { return getTokens(FitchGrammarParser.IDENTITY); }
		public TerminalNode IDENTITY(int i) {
			return getToken(FitchGrammarParser.IDENTITY, i);
		}
		public List<Multiple_referenceContext> multiple_reference() {
			return getRuleContexts(Multiple_referenceContext.class);
		}
		public Multiple_referenceContext multiple_reference(int i) {
			return getRuleContext(Multiple_referenceContext.class,i);
		}
		public List<TerminalNode> NEGATION() { return getTokens(FitchGrammarParser.NEGATION); }
		public TerminalNode NEGATION(int i) {
			return getToken(FitchGrammarParser.NEGATION, i);
		}
		public List<Single_referenceContext> single_reference() {
			return getRuleContexts(Single_referenceContext.class);
		}
		public Single_referenceContext single_reference(int i) {
			return getRuleContext(Single_referenceContext.class,i);
		}
		public List<TerminalNode> CONJUNCTION() { return getTokens(FitchGrammarParser.CONJUNCTION); }
		public TerminalNode CONJUNCTION(int i) {
			return getToken(FitchGrammarParser.CONJUNCTION, i);
		}
		public List<TerminalNode> DISJUNCTION() { return getTokens(FitchGrammarParser.DISJUNCTION); }
		public TerminalNode DISJUNCTION(int i) {
			return getToken(FitchGrammarParser.DISJUNCTION, i);
		}
		public List<TerminalNode> IMPLICATION() { return getTokens(FitchGrammarParser.IMPLICATION); }
		public TerminalNode IMPLICATION(int i) {
			return getToken(FitchGrammarParser.IMPLICATION, i);
		}
		public List<TerminalNode> BICONDITIONAL() { return getTokens(FitchGrammarParser.BICONDITIONAL); }
		public TerminalNode BICONDITIONAL(int i) {
			return getToken(FitchGrammarParser.BICONDITIONAL, i);
		}
		public List<TerminalNode> EXISTENTIAL() { return getTokens(FitchGrammarParser.EXISTENTIAL); }
		public TerminalNode EXISTENTIAL(int i) {
			return getToken(FitchGrammarParser.EXISTENTIAL, i);
		}
		public List<TerminalNode> UNIVERSAL() { return getTokens(FitchGrammarParser.UNIVERSAL); }
		public TerminalNode UNIVERSAL(int i) {
			return getToken(FitchGrammarParser.UNIVERSAL, i);
		}
		public IntroductionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_introduction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterIntroduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitIntroduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitIntroduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntroductionContext introduction() throws RecognitionException {
		IntroductionContext _localctx = new IntroductionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_introduction);
		int _la;
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTITY:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67);
					match(IDENTITY);
					}
					}
					setState(70); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTITY );
				setState(72);
				match(T__2);
				}
				break;
			case NEGATION:
				enterOuterAlt(_localctx, 2);
				{
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(73);
					match(NEGATION);
					}
					}
					setState(76); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEGATION );
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(78);
					match(T__2);
					}
					}
					setState(81); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(83);
				multiple_reference();
				}
				break;
			case CONJUNCTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(84);
					match(CONJUNCTION);
					}
					}
					setState(87); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CONJUNCTION );
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(89);
					match(T__2);
					}
					}
					setState(92); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(94);
					single_reference();
					}
					}
					setState(97); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NUMBER );
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(99);
					match(T__3);
					}
					}
					setState(102); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__3 );
				setState(104);
				single_reference();
				}
				break;
			case DISJUNCTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(107); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(106);
					match(DISJUNCTION);
					}
					}
					setState(109); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==DISJUNCTION );
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(111);
					match(T__2);
					}
					}
					setState(114); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(116);
				single_reference();
				}
				break;
			case IMPLICATION:
				enterOuterAlt(_localctx, 5);
				{
				setState(118); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(117);
					match(IMPLICATION);
					}
					}
					setState(120); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IMPLICATION );
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(122);
					match(T__2);
					}
					}
					setState(125); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(127);
				multiple_reference();
				}
				break;
			case BICONDITIONAL:
				enterOuterAlt(_localctx, 6);
				{
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(128);
					match(BICONDITIONAL);
					}
					}
					setState(131); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==BICONDITIONAL );
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(133);
					match(T__2);
					}
					}
					setState(136); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(138);
					multiple_reference();
					}
					}
					setState(141); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NUMBER );
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(143);
					match(T__3);
					}
					}
					setState(146); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__3 );
				setState(148);
				multiple_reference();
				}
				break;
			case EXISTENTIAL:
				enterOuterAlt(_localctx, 7);
				{
				setState(151); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(150);
					match(EXISTENTIAL);
					}
					}
					setState(153); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==EXISTENTIAL );
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(155);
					match(T__2);
					}
					}
					setState(158); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(160);
				single_reference();
				}
				break;
			case UNIVERSAL:
				enterOuterAlt(_localctx, 8);
				{
				setState(162); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(161);
					match(UNIVERSAL);
					}
					}
					setState(164); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==UNIVERSAL );
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(166);
					match(T__2);
					}
					}
					setState(169); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__2 );
				setState(171);
				multiple_reference();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EliminationContext extends ParserRuleContext {
		public List<Single_referenceContext> single_reference() {
			return getRuleContexts(Single_referenceContext.class);
		}
		public Single_referenceContext single_reference(int i) {
			return getRuleContext(Single_referenceContext.class,i);
		}
		public List<TerminalNode> IDENTITY() { return getTokens(FitchGrammarParser.IDENTITY); }
		public TerminalNode IDENTITY(int i) {
			return getToken(FitchGrammarParser.IDENTITY, i);
		}
		public List<TerminalNode> NEGATION() { return getTokens(FitchGrammarParser.NEGATION); }
		public TerminalNode NEGATION(int i) {
			return getToken(FitchGrammarParser.NEGATION, i);
		}
		public List<TerminalNode> CONJUNCTION() { return getTokens(FitchGrammarParser.CONJUNCTION); }
		public TerminalNode CONJUNCTION(int i) {
			return getToken(FitchGrammarParser.CONJUNCTION, i);
		}
		public List<Multiple_referenceContext> multiple_reference() {
			return getRuleContexts(Multiple_referenceContext.class);
		}
		public Multiple_referenceContext multiple_reference(int i) {
			return getRuleContext(Multiple_referenceContext.class,i);
		}
		public List<TerminalNode> DISJUNCTION() { return getTokens(FitchGrammarParser.DISJUNCTION); }
		public TerminalNode DISJUNCTION(int i) {
			return getToken(FitchGrammarParser.DISJUNCTION, i);
		}
		public List<TerminalNode> IMPLICATION() { return getTokens(FitchGrammarParser.IMPLICATION); }
		public TerminalNode IMPLICATION(int i) {
			return getToken(FitchGrammarParser.IMPLICATION, i);
		}
		public List<TerminalNode> BICONDITIONAL() { return getTokens(FitchGrammarParser.BICONDITIONAL); }
		public TerminalNode BICONDITIONAL(int i) {
			return getToken(FitchGrammarParser.BICONDITIONAL, i);
		}
		public List<TerminalNode> EXISTENTIAL() { return getTokens(FitchGrammarParser.EXISTENTIAL); }
		public TerminalNode EXISTENTIAL(int i) {
			return getToken(FitchGrammarParser.EXISTENTIAL, i);
		}
		public List<TerminalNode> UNIVERSAL() { return getTokens(FitchGrammarParser.UNIVERSAL); }
		public TerminalNode UNIVERSAL(int i) {
			return getToken(FitchGrammarParser.UNIVERSAL, i);
		}
		public EliminationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elimination; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).enterElimination(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FitchGrammarListener ) ((FitchGrammarListener)listener).exitElimination(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FitchGrammarVisitor ) return ((FitchGrammarVisitor<? extends T>)visitor).visitElimination(this);
			else return visitor.visitChildren(this);
		}
	}
